--- a/index.html
+++ b/index.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <title>Vitor Magnago</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-    <header class="info">
-        <span class="info__generic">Reliable, efficient delivery</span>
-        <h1 class="info__title">Powered by Technology</h1>
-        <p class="info__text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
-    </header>
-    <main class="cards-wrap">
-        <div class="card card--supervisor">
-            <h2 class="card__title">Supervisor</h2>
-            <p class="card__text">Monitors activity to identify project roadblocks</p>
-            <img src="images/icon-supervisor.svg" alt="" class="card__image">
-        </div>
-        <div class="card card--team">
-            <h2 class="card__title">Team Builder</h2>
-            <p class="card__text">Scans our talent network to create the optimal team for your project</p>
-            <img src="images/icon-team-builder.svg" alt="" class="card__image">
-        </div>
-        <div class="card card--karma">
-            <h2 class="card__title">Karma</h2>
-            <p class="card__text">Regularly evaluates our talent to ensure quality</p>
-            <img src="images/icon-karma.svg" alt="" class="card__image">
-        </div>
-        <div class="card card--calculator">
-            <h2 class="card__title">Calculator</h2>
-            <p class="card__text">Uses data from past projects to provide better delivery estimates</p>
-            <img src="images/icon-calculator.svg" alt="" class="card__image">
-        </div>
-    </main>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="shortcut icon"
+			href="images/favicon-32x32.png"
+			type="image/x-icon"
+		/>
+		<title>Vitor Magnago</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="assets/style.css" />
+	</head>
+	<body>
+		<header class="info">
+			<span class="info__generic">Reliable, efficient delivery</span>
+			<h1 class="info__title">Powered by Technology</h1>
+			<p class="info__text">
+				Our Artificial Intelligence powered tools use millions of project data
+				points to ensure that your project is successful
+			</p>
+		</header>
+		<main class="cards-wrap">
+			<div class="card card--supervisor">
+				<h2 class="card__title">Supervisor</h2>
+				<p class="card__text">
+					Monitors activity to identify project roadblocks
+				</p>
+				<img src="images/icon-supervisor.svg" alt="" class="card__image" />
+			</div>
+			<div class="card card--team">
+				<h2 class="card__title">Team Builder</h2>
+				<p class="card__text">
+					Scans our talent network to create the optimal team for your project
+				</p>
+				<img src="images/icon-team-builder.svg" alt="" class="card__image" />
+			</div>
+			<div class="card card--karma">
+				<h2 class="card__title">Karma</h2>
+				<p class="card__text">
+					Regularly evaluates our talent to ensure quality
+				</p>
+				<img src="images/icon-karma.svg" alt="" class="card__image" />
+			</div>
+			<div class="card card--calculator">
+				<h2 class="card__title">Calculator</h2>
+				<p class="card__text">
+					Uses data from past projects to provide better delivery estimates
+				</p>
+				<img src="images/icon-calculator.svg" alt="" class="card__image" />
+			</div>
+		</main>
+	</body>
 </html>
